[project]
name = "comfyui-global-prompts"
description = "Set global prompts using note node."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-global-prompts"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-global-prompts"
Icon = ""
